[tool.poetry]
name = "kfb"
version = "0.1.0"
description = ""
authors = ["ygidtu <ygidtu@gmail.com>"]
readme = "README.md"

include = [
    {path = "lib"},
    {path = "lib", format="*"},
]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.2"
openslide-python = "^1.3.1"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
